fixed width on mobile

--- a/site.css
+++ b/site.css
@@ -16,7 +16,7 @@ body, h1, h2, h3, h4, h5, h6, p, hr, pre, code, blockquote, form, fieldset, lege
 }
 
 html{ font-size: 10px; }
-body { margin: 0; padding: 0; background-color: #fff; color: #333333; font-size: 1.6em; line-height:1.8em; }
+body { margin: 0; padding: 0; background-color: #fff; color: #333333; font-size: 1.6em; line-height:1.8em; position: fixed; }
 body, input, textarea, select { font-family: 'Open Sans', Arial, Helvetica, sans-serif; }
 
 /* --------------------------------------------------------------------- */
@@ -2284,6 +2284,9 @@ ul.error li
 
 /*************************************************************************/
 /* MAJOR NAV */
+
+ #mobile-menu{ display: none; }
+
  .primary{ background-color:#FFF;max-width: 1150px;margin: 0 auto; }
  nav.primary{-webkit-flex-basis:100%;flex-basis:100%;}
 
@@ -2307,7 +2310,6 @@ ul.error li
 nav.primary ul li{ margin-bottom:0; position: relative; }
 nav.primary ul li a{ color:#415061;font-weight:800;padding:0.2em 1em;text-decoration:none; cursor: pointer; }
 nav.primary ul li a:hover{ text-decoration: underline; }
-/*.secondary-menu{display:none}*/
 nav.primary .login{ color: #63af5e; }
 nav.primary .login a{border-left: 1px solid darkgrey; }
 nav.primary ul .dropdown{background-color:#99867C;display:none;position:absolute;z-index:1;}
@@ -2324,7 +2326,7 @@ nav.primary>ul>li.active::after {
     border-color: transparent transparent rgba(0,0,0,0.2) transparent;
     border-style: solid;
     border-width: 0 10px 10px 10px;
-    bottom: -24px;
+    bottom: -25px;
     content: "";
     height: 0;
     left: 0;
@@ -2351,10 +2353,10 @@ nav.primary>ul>li.active.login::after {
 .secondary-menu ul > li > ul {list-style-type: none; padding-left: 0;}
 .secondary-menu ul a{text-decoration: none; color: black; cursor: pointer;}
 .secondary-menu ul a:hover{color: #4aa145;}
-.secondary-menu .container ul > li { font-weight: bold; flex: 0 1 21%; padding: 1em 0em; }
+.secondary-menu .container ul > li { font-weight: bold; -webkit-flex: 0 1 21%; -ms-flex: 0 1 21%; flex: 0 1 21%; padding: 1em 0em; }
 .secondary-menu .container ul > li > ul > li { font-weight: normal; padding: 0; }
 .secondary-menu .container ul li { padding: 0.2em 1em; }
-.secondary-menu .container ul:first-child { display: flex; flex-wrap: wrap; justify-content: left;}
+.secondary-menu .container ul:first-child { display:-webkit-box;display:-webkit-flex; display:flex; -webkit-flex-wrap: wrap; -ms-flex-wrap: wrap; flex-wrap: wrap; -webkit-justify-content: left; -ms-justify-content: left; justify-content: left;}
 .secondary-menu .container .members-only { display:inline-block; padding-left: 5px; }
 /* secondary login menu section */
 .secondary-menu.login { background:#434343; }
@@ -2363,8 +2365,8 @@ nav.primary>ul>li.active.login::after {
 
 .secondary-menu.login h2{ font-weight: bold; }
 .secondary-menu.login p{ font-weight: 100;font-size: small;line-height: 1.4; }
-.secondary-menu.login .container ul > li { font-weight: bold; flex: 0 1 30%; padding: 1em 0em; }
-.secondary-menu.login .container ul:first-child { justify-content: flex-end;}
+.secondary-menu.login .container ul > li { font-weight: bold; -webkit-flex: 0 1 30%; flex: 0 1 30%; padding: 1em 0em; }
+.secondary-menu.login .container ul:first-child { -webkit-justify-content: flex-end; -ms-justify-content: flex-end; justify-content: flex-end;}
 .secondary-menu.login label{ display: block; text-transform: uppercase; font-weight: normal;}
 .secondary-menu.login input{ margin-bottom: 1em; padding-bottom: 3px; width: 100%; }
 .secondary-menu.login li{ overflow: hidden; padding-right: 1em!important; box-sizing: border-box;}
@@ -2605,7 +2607,7 @@ nav.primary>ul>li.active.login::after {
 
 #content_container { background: #fff; }
 
-#content_shadow { background: #fff; width: 1100px; margin: 0 auto; padding: 0 50px 20px 50px; }
+#content_shadow { background: #fff; max-width: 1100px; margin: 0 auto; padding: 0 50px 20px 50px; }
 
 /* 
 #main_column { float: right; width: 66%; } 
@@ -2663,7 +2665,7 @@ rgin: 0 auto;
 #header
 {
     background: none;
-    width: 1100px;
+    max-width: 1100px;
     height: 115px;
     margin: 0 auto;
     padding: 0 50px;
@@ -2678,7 +2680,7 @@ rgin: 0 auto;
 
 #header_interior
 {
-    width: 1100px;
+    max-width: 1100px;
     height: 115px;
     margin: 0 auto;
     padding: 0 50px;
@@ -2766,6 +2768,7 @@ rgin: 0 auto;
 #mobileSearch { display:none; }
 #mobileMenuButton { display:none; }
 
+
 /* --------------------------------------------------------------------- */
 /* Ads
 /* --------------------------------------------------------------------- */
@@ -2803,7 +2806,7 @@ body.no_advertisement #advertisement
 }
 .ad_interior
 {
-	width:1200px;
+	max-width:1200px;
 	margin:0 auto;
 	height:93px;
 }
@@ -2820,7 +2823,7 @@ body.no_advertisement #advertisement
 /* --------------------------------------------------------------------- */
 
 #footer { background:#333333; width:100%; }
-.footer_container { background:#333333; width:1100px; margin: 0 auto; padding: 50px 0 50px 0; min-height:225px; }
+.footer_container { background:#333333; max-width:1100px; margin: 0 auto; padding: 50px 0 50px 0; min-height:225px; }
 
 .footer_block { display:inline-block; width:33%; vertical-align:top; }
 
@@ -5238,6 +5241,7 @@ a.preheader { color:#1369ab; text-decoration:none; font-size:14px; font-weight:7
 /* option 1 dark background */
 .mm-menu { background: #333333; }
 .mm-title, .mm-listview li a, .mm-panels a.button  { color: white!important; }
+.mm-listview li a {-webkit-display: flex;display:-webkit-box;display: flex;display: flex;-webkit-align-items: center;-ms-align-items: center;align-items: center;-webkit-justify-content: space-between;justify-content: space-between;}
 .mm-menu, .mm-menu .mm-listview, .mm-menu .mm-listview>li .mm-next:after, .mm-menu .mm-btn:after, .mm-menu .mm-btn:before { border-color: rgba(255,255,255,0.5); }
 .mm-spacer, .mm-border { border-color: transparent!important; }
 .mm-panels a.button { background-color: #63af5e;}
